--- a/.github/workflows/full-tests.yml
+++ b/.github/workflows/full-tests.yml
@@ -14,6 +14,8 @@ jobs:
         working-directory: codex-rs
     steps:
       - uses: actions/checkout@v4
+      - name: Install DotSlash
+        uses: facebook/install-dotslash@v2
       - uses: dtolnay/rust-toolchain@stable
         with:
           toolchain: 1.93.0
